// Copyright (C) 2025 The Android Open Source Project
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Copyright 2025 The Lynx Authors. All rights reserved.
// Licensed under the Apache License Version 2.0 that can be found in the
// LICENSE file in the root directory of this source tree.

syntax = "proto2";

package perfetto.protos;

message JSProfilePacket {
  // The runtime profile data in JSON format.
  // Format reference:
  // https://chromedevtools.github.io/devtools-protocol/tot/Profiler/#type-Profile
  // Note: Profile data may be split across multiple TracePacket.
  required string runtime_profile = 1;

  // Unique identifier for the profile.
  // Profiles with the same profile_id can be part of the same profiling
  // session.
  required int32 profile_id = 2;

  // Indicates whether the profile with the corresponding profile_id has
  // finished. When is_done is true, it signifies the end of the profile data
  // collection for the given profile_id.
  required bool is_done = 3;

  // Identifies the track of the event. See TrackEvent::track_uuid.
  required uint64 track_id = 4;
}